--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,6 @@ output_files
 *sopc_*
 *.zip # no archives
 PLLJ_PLLSPE_INFO.txt # The generated PLL specification file
+ALU.qpf
+ALU.qsf
+c5_pin_model_dump.txt
