--- a/Final Project/ECE3710FinalProject.qsf
+++ b/Final Project/ECE3710FinalProject.qsf
@@ -42,7 +42,7 @@ set_global_assignment -name DEVICE 5CSEMA5F31C6
 set_global_assignment -name TOP_LEVEL_ENTITY top_level_counter
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:41:39  NOVEMBER 30, 2021"
-set_global_assignment -name LAST_QUARTUS_VERSION "20.1.1 Lite Edition"
+set_global_assignment -name LAST_QUARTUS_VERSION "18.0.0 Lite Edition"
 set_global_assignment -name VERILOG_FILE true_dual_port_ram_single_clock.v
 set_global_assignment -name VERILOG_FILE top_level_counter.v
 set_global_assignment -name VERILOG_FILE tb_top_level_counter.v
@@ -65,64 +65,65 @@ set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Blue[5]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Blue[6]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Blue[7]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Blue[4]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Blue[3]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Blue[2]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Blue[1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Blue[0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Clk
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to ClkOut
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Green[7]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Green[6]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Green[5]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Green[4]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Green[3]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Green[2]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Green[1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Green[0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Hsync
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Red[7]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Red[6]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to vga_blank
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Reset
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Red[0]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Red[1]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Red[2]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Red[3]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Red[4]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Red[5]
-set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to Vsync
-set_location_assignment PIN_J14 -to Blue[7]
-set_location_assignment PIN_G15 -to Blue[6]
-set_location_assignment PIN_F15 -to Blue[5]
-set_location_assignment PIN_H14 -to Blue[4]
-set_location_assignment PIN_F14 -to Blue[3]
-set_location_assignment PIN_H13 -to Blue[2]
-set_location_assignment PIN_G13 -to Blue[1]
-set_location_assignment PIN_B13 -to Blue[0]
-set_location_assignment PIN_E11 -to Green[7]
-set_location_assignment PIN_G12 -to Green[5]
-set_location_assignment PIN_F11 -to Green[6]
-set_location_assignment PIN_G11 -to Green[4]
-set_location_assignment PIN_G10 -to Green[3]
-set_location_assignment PIN_H12 -to Green[2]
-set_location_assignment PIN_J10 -to Green[1]
-set_location_assignment PIN_J9 -to Green[0]
-set_location_assignment PIN_F13 -to Red[7]
-set_location_assignment PIN_E12 -to Red[6]
-set_location_assignment PIN_D12 -to Red[5]
-set_location_assignment PIN_C12 -to Red[4]
-set_location_assignment PIN_B12 -to Red[3]
-set_location_assignment PIN_E13 -to Red[2]
-set_location_assignment PIN_C13 -to Red[1]
-set_location_assignment PIN_A13 -to Red[0]
-set_location_assignment PIN_B11 -to Hsync
-set_location_assignment PIN_D11 -to Vsync
-set_location_assignment PIN_A11 -to ClkOut
-set_location_assignment PIN_F10 -to vga_blank
-set_location_assignment PIN_AF14 -to Clk
-set_location_assignment PIN_AA14 -to Reset
+set_global_assignment -name VERILOG_FILE bitgen.v
+set_location_assignment PIN_A13 -to RGB[0]
+set_location_assignment PIN_C13 -to RGB[1]
+set_location_assignment PIN_E13 -to RGB[2]
+set_location_assignment PIN_B12 -to RGB[3]
+set_location_assignment PIN_C12 -to RGB[4]
+set_location_assignment PIN_D12 -to RGB[5]
+set_location_assignment PIN_E12 -to RGB[6]
+set_location_assignment PIN_F13 -to RGB[7]
+set_location_assignment PIN_J9 -to RGB[8]
+set_location_assignment PIN_J10 -to RGB[9]
+set_location_assignment PIN_H12 -to RGB[10]
+set_location_assignment PIN_G10 -to RGB[11]
+set_location_assignment PIN_G11 -to RGB[12]
+set_location_assignment PIN_G12 -to RGB[13]
+set_location_assignment PIN_F11 -to RGB[14]
+set_location_assignment PIN_E11 -to RGB[15]
+set_location_assignment PIN_B13 -to RGB[16]
+set_location_assignment PIN_G13 -to RGB[17]
+set_location_assignment PIN_H13 -to RGB[18]
+set_location_assignment PIN_F14 -to RGB[19]
+set_location_assignment PIN_H14 -to RGB[20]
+set_location_assignment PIN_F15 -to RGB[21]
+set_location_assignment PIN_G15 -to RGB[22]
+set_location_assignment PIN_J14 -to RGB[23]
+set_location_assignment PIN_A11 -to vga_clk
+set_location_assignment PIN_F10 -to vga_blank_n
+set_location_assignment PIN_B11 -to hsync
+set_location_assignment PIN_D11 -to vsync
+set_location_assignment PIN_AF14 -to clk
+set_location_assignment PIN_AB12 -to rst
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[9]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[22]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[23]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[21]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[20]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[19]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[18]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[17]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[16]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[15]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[14]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[13]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[12]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[11]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[10]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[8]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[7]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[6]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to clk
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to hsync
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to rst
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to vga_blank_n
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to vga_clk
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to vsync
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
