--- a/Final Project/ECE3710FinalProject.qsf
+++ b/Final Project/ECE3710FinalProject.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEMA5F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY top_level_counter
+set_global_assignment -name TOP_LEVEL_ENTITY FSMwithVGA
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:41:39  NOVEMBER 30, 2021"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.0.0 Lite Edition"
@@ -62,9 +62,6 @@ set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_symbol
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_signal_integrity
 set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_board_design_boundary_scan
-set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
-set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
-set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_global_assignment -name VERILOG_FILE bitgen.v
 set_location_assignment PIN_A13 -to RGB[0]
 set_location_assignment PIN_C13 -to RGB[1]
@@ -96,6 +93,10 @@ set_location_assignment PIN_B11 -to hsync
 set_location_assignment PIN_D11 -to vsync
 set_location_assignment PIN_AF14 -to clk
 set_location_assignment PIN_AB12 -to rst
+set_global_assignment -name VERILOG_FILE FSMwithVGA.v
+set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
+set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
+set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[9]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[22]
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to RGB[23]
