--- a/Final Project/ECE3710FinalProject.qsf
+++ b/Final Project/ECE3710FinalProject.qsf
@@ -39,7 +39,7 @@
 
 set_global_assignment -name FAMILY "Cyclone V"
 set_global_assignment -name DEVICE 5CSEMA5F31C6
-set_global_assignment -name TOP_LEVEL_ENTITY FSMwithVGA
+set_global_assignment -name TOP_LEVEL_ENTITY top_level_counter
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:41:39  NOVEMBER 30, 2021"
 set_global_assignment -name LAST_QUARTUS_VERSION "18.0.0 Lite Edition"
