--- a/Final Project/ECE3710FinalProject.qsf
+++ b/Final Project/ECE3710FinalProject.qsf
@@ -126,4 +126,7 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to rst
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to vga_blank_n
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to vga_clk
 set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to vsync
+set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
+set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name VERILOG_FILE Register_VGA.v
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
