--- a/Final Project/ECE3710FinalProject.qsf
+++ b/Final Project/ECE3710FinalProject.qsf
@@ -42,7 +42,7 @@ set_global_assignment -name DEVICE 5CSEMA5F31C6
 set_global_assignment -name TOP_LEVEL_ENTITY top_level_counter
 set_global_assignment -name ORIGINAL_QUARTUS_VERSION 20.1.1
 set_global_assignment -name PROJECT_CREATION_TIME_DATE "14:41:39  NOVEMBER 30, 2021"
-set_global_assignment -name LAST_QUARTUS_VERSION "18.0.0 Lite Edition"
+set_global_assignment -name LAST_QUARTUS_VERSION "18.1.0 Lite Edition"
 set_global_assignment -name VERILOG_FILE true_dual_port_ram_single_clock.v
 set_global_assignment -name VERILOG_FILE top_level_counter.v
 set_global_assignment -name VERILOG_FILE tb_top_level_counter.v
@@ -129,4 +129,10 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to vsync
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name VERILOG_FILE Register_VGA.v
+set_location_assignment PIN_Y16 -to left
+set_location_assignment PIN_W15 -to center
+set_location_assignment PIN_AA15 -to right
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to center
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to right
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to left
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
