--- a/Final Project/ECE3710FinalProject.qsf
+++ b/Final Project/ECE3710FinalProject.qsf
@@ -129,4 +129,10 @@ set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to vsync
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
 set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
 set_global_assignment -name VERILOG_FILE Register_VGA.v
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to left
+set_location_assignment PIN_Y16 -to left
+set_location_assignment PIN_W15 -to center
+set_location_assignment PIN_AA15 -to right
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to center
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to right
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
